# SCOPE_Torch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PLAN.md  README.md  mkdocs.yml  prepare_scope_input.py  pyproject.toml  upstream
.github/: release-drafter.yml
.github/workflows/: release-drafter.yml  release.yml  tests.yml
docs/: benchmark-policy.md  examples.md  index.md  input-output-reference.md  installation.md  leaf-angle-distribution.md  model-mechanics.md  production-notes.md  quickstart.md  releasing.md  variable-glossary.md
docs/assets/: leaf_angle_distribution_comparison.json
docs/workflow-variables/: energy-balance.md  fluorescence.md  reflectance.md  thermal.md
examples/: basic_scene_reflectance.py  leaf_angle_distribution_comparison.py  scope_workflow_demo.py
examples/output/: basic_scene_reflectance.json  scope_workflow_demo.json
scripts/: benchmark_kernels.py  compare_scope_benchmark.py  export_scope_benchmark.m  export_scope_timeseries_benchmarks.m  fetch_upstream_scope.py  run_scope_benchmark_suite.py  run_scope_timeseries_benchmark_suite.py
src/scope/: __init__.py  __main__.py  config.py  inference.py  variables.py
src/scope/biochem/: __init__.py  leaf.py
src/scope/canopy/: __init__.py  fluorescence.py  foursail.py  layered_rt.py  reflectance.py  thermal.py
src/scope/cli/: __init__.py  fetch_upstream.py  main.py  prepare_scope_input.py  run.py  variables.py
src/scope/data/: __init__.py  grid.py
src/scope/energy/: balance.py  fluxes.py
src/scope/io/: __init__.py  export.py  prepare.py  schema.py
src/scope/runners/: __init__.py  grid.py
src/scope/spectral/: __init__.py  fluspect.py  loaders.py  optics.py  soil.py
src/scope_torch/: __init__.py
src/scope_torch/biochem/: leaf.py
src/scope_torch/canopy/: __init__.py  fluorescence.py  foursail.py  layered_rt.py  reflectance.py  thermal.py
src/scope_torch/data/: grid.py
src/scope_torch/energy/: __init__.py  balance.py  fluxes.py
src/scope_torch/runners/: __init__.py  grid.py
src/scope_torch/spectral/: __init__.py  fluspect.py  loaders.py
tests/: _matlab_benchmark_helpers.py  conftest.py  test_benchmark_kernels.py  test_benchmark_summary_regression.py  test_cli_wrappers.py  test_compare_scope_benchmark.py  test_config.py  test_example_scripts.py  test_grid_data_module.py  test_kernel_execution_modes.py  test_layered_rt_transport.py  test_main_entry.py  test_netcdf_export.py  test_numerical_edge_cases.py  test_package_name.py  test_prepare_scope_input.py  test_scope_benchmark_parity.py  test_scope_benchmark_suite.py  test_scope_grid_runner.py  test_scope_timeseries_benchmark_parity.py  test_scope_timeseries_benchmark_suite.py  test_variable_registry.py
tests/biochem/: test_leaf.py
tests/canopy/: test_fluorescence.py  test_foursail.py  test_layered_rt.py  test_reflectance.py  test_thermal.py
tests/data/: scope_benchmark_suite_summary.json  scope_case_001.mat  scope_case_001_report.json  scope_timeseries_benchmark_summary.json
tests/data/benchmark_suite_reports/: scope_case_001_report.json  scope_case_002_report.json  scope_case_003_report.json  scope_case_004_report.json  scope_case_005_report.json  scope_case_006_report.json  scope_case_007_report.json  scope_case_008_report.json  scope_case_009_report.json  scope_case_010_report.json
tests/data/timeseries_benchmark_fixtures/: scope_ts_step_001.mat  scope_ts_step_003.mat  scope_ts_step_004.mat  scope_ts_step_008.mat  scope_ts_step_009.mat  scope_ts_step_017.mat  scope_ts_step_021.mat  scope_ts_step_022.mat  scope_ts_step_023.mat  scope_ts_step_026.mat  scope_ts_step_028.mat  scope_ts_step_029.mat  scope_ts_step_030.mat
tests/data/timeseries_benchmark_reports/: scope_ts_step_001_report.json  scope_ts_step_002_report.json  scope_ts_step_003_report.json  scope_ts_step_004_report.json  scope_ts_step_005_report.json  scope_ts_step_006_report.json  scope_ts_step_007_report.json  scope_ts_step_008_report.json  scope_ts_step_009_report.json  scope_ts_step_010_report.json  scope_ts_step_011_report.json  scope_ts_step_012_report.json  scope_ts_step_013_report.json  scope_ts_step_014_report.json  scope_ts_step_015_report.json  scope_ts_step_016_report.json  scope_ts_step_017_report.json  scope_ts_step_018_report.json  scope_ts_step_019_report.json  scope_ts_step_020_report.json  scope_ts_step_021_report.json  scope_ts_step_022_report.json  scope_ts_step_023_report.json  scope_ts_step_024_report.json  scope_ts_step_025_report.json  scope_ts_step_026_report.json  scope_ts_step_027_report.json  scope_ts_step_028_report.json  scope_ts_step_029_report.json  scope_ts_step_030_report.json
tests/energy/: test_balance.py  test_fluxes.py
tests/spectral/: test_fluspect.py  test_loaders.py  test_soil.py
