[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SCOPE-RTM"
version = "0.2.0"
description = "PyTorch reimplementation of the SCOPE radiative transfer model."
readme = "README.md"
authors = [{name = "Marc Yin", email = "marc.yin@example.com"}]
license = "GPL-3.0-only"
requires-python = ">=3.10"
keywords = ["scope", "radiative-transfer", "remote-sensing", "pytorch", "fluorescence", "thermal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "torch>=2.2,<3",
    "numpy>=1.26,<3",
    "scipy>=1.11",
    "xarray>=2024.1",
    "rioxarray>=0.15",
    "pandas>=2.2",
    "tqdm>=4.66"
]

[project.urls]
"Original MATLAB SCOPE" = "https://github.com/Christiaanvandertol/SCOPE"
"Original SCOPE Manual" = "https://scope-model.readthedocs.io/en/master/"

[project.scripts]
scope = "scope.cli.main:main"
scope-fetch-upstream = "scope.cli.fetch_upstream:main"
scope-prepare = "scope.cli.prepare_scope_input:main"
scope-run = "scope.cli.run:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.5"
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.2"
]
release = [
    "build>=1.2",
    "twine>=5.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a CUDA GPU",
    "matlab: marks tests that require MATLAB",
]
